--- a/investeren/index.html
+++ b/investeren/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
+    <link rel="stylesheet" href="/style.css">
+    
+    
     <title>Investeren</title>
 </head>
 <body>
   <header class="sans-serif">
-    <div class="cover bg-left bg-center-l" style="background-image: url(http://mrmrs.github.io/photos/u/011.jpg)">
-      <div class="bg-black-80 pb5 pb6-m pb7-l">
+    <div class="cover bg-left bg-center-l" style="background-image: url(/assets/Geld\ 2.jpg)">
+      <div class="bg-black-80-header pb5 pb6-m pb7-l">
         <nav class="dt w-100 mw8 center"> 
           <div class="dtc v-mid tr pa3">
             <a class="f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/" >Artikelen</a> 
@@ -23,7 +26,7 @@
           <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Leren Investeren</h1>
           <h2 class="fw1 f3 white-80 mt3 mb4">Geef jezelf de financiële rust die je verdient</h2>
           <a class="f6 no-underline grow dib v-mid bg-blue white ba b--blue ph3 pv2 mb3" href="/">Artikelen</a>
-          <span class="dib v-mid ph3 white-70 mb3">or</span>
+          <span class="dib v-mid ph3 white-70 mb3">of</span>
           <a class="f6 no-underline grow dib v-mid white ba b--white ph3 pv2 mb3" href="">Investeringen</a>
         </div>
       </div>
@@ -31,7 +34,7 @@
   </header>
 
   <section class="mw7 center avenir">
-    <h2 class="baskerville fw1 ph3 ph0-l">News</h2>
+    <h2 class="baskerville fw1 ph3 ph0-l">Nieuws</h2>
     <article class="bt bb b--black-10">
       <a class="db pv4 ph3 ph0-l no-underline black dim" href="#0">
         <div class="flex flex-column flex-row-ns">
@@ -94,39 +97,13 @@
   
     <footer class="pa4 pa5-l black-70 bt b--black-10">
         <div class="mb4-l cf">
-          <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4">Studios</h1>
+          <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4">Over Ons</h1>
           <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
-            <h4 class="f5 f4-l fw6">SF</h4>
-            <span class="f7 f6-l db black-70">837 Larkin St.</span>
-            <span class="f7 f6-l black-70">San Francisco, CA 94109 </span>
+            <h4 class="f5 f4-l fw6">BE</h4>
+            <span class="f7 f6-l db black-70">Aannemersstraat 210</span>
+            <span class="f7 f6-l black-70">Gent </span>
             <a class="f6 db fw6 pv3 black-70 link dim" title="Call SF" href="tel:+12075555555">
-              +1 207-555-5555
-            </a>
-          </article>
-          <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-            <h4 class="f5 f4-l fw6">LA</h4>
-            <span class="f7 f6-l db black-70">
-              1111 Manor Way
-            </span>
-            <span class="f7 f6-l di black-70">
-              Los Angeles, CA 90048
-            </span>
-            <a href="tel:+13235555555" class="f6 db fw6 pv3 link dim black-70" title="Call the LA office.">
-              +1 323-555-5555
-            </a>
-          </article>
-          <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
-            <h4 class="f5 f4-l fw6">London</h4>
-            <span class="f7 f6-l db black-70">11 Downey St.</span>
-            <span class="f7 f6-l black-70">London, UK</span>
-            <a href="tel:+5555555555" class="link dim f6 db fw6 pv3 black-70" title="Call the London office">+44 0 5555-5555</a>
-          </article>
-          <article class="fl w-50 dib-ns w-auto-ns mb4 pl2 pl0-ns">
-            <h4 class="f5 f4-l fw6">Tokyo</h4>
-            <span class="f7 f6-l db black-70">1982 Flangan Rd.</span>
-            <span class="f7 f6-l">Shinjuku, Tokyo</span>
-            <a href="tel:+444444444444" class="f6 db dim fw6 pv3 link black-70" title="Call Tokyo Office">
-              +99 5555-5555
+              +32 479511620
             </a>
           </article>
         </div>
@@ -138,16 +115,16 @@
           </div>
           <div class="mb4 mb0-ns fl w-100 w-50-l" >
             <p class="f4 fw6 mb2 f6 mt0">
-              Sign up for our newsletter.
+              Schrijf je in voor onze nieuwsbrief.
             </p>
-            <input placeholder="Email Address" class="mw-100 w-100 w5-ns f5 input-reset ba b--black-20 pv3 ph4 border-box">
+            <input placeholder="Email Adres" class="mw-100 w-100 w5-ns f5 input-reset ba b--black-20 pv3 ph4 border-box">
             <input type="submit" class="input-reset w-100 w-auto-ns bg-black-80 white f5 pv2 pv3-ns ph4 ba b--black-80 bg-hover-mid-gray">
           </div>
         </section>
         <div class="dt dt--fixed w-100" >
           <div class="dn dtc-ns v-mid">
             <p class="f7 black-70 dib pr3 mb3">
-              Copyright © Your Company 2048
+              Copyright © Leren Investeren
             </p>
           </div>
           <div class="db dtc-ns black-70 tc tr-ns v-mid">
